update Readme file